fixed action link vertical alignment

--- a/src/common/components/ActionLink.scss
+++ b/src/common/components/ActionLink.scss
@@ -3,6 +3,7 @@
 	cursor: pointer;
 	display: inline-flex;
 	align-items: center;
+	vertical-align: middle;
 }
 .action-link.disabled {
 	color: #ccc;
